<resources>
    <string name="app_name">Dialer</string>
    <string name="settings">SETTINGS</string>
    <string name="callList">CALL LIST</string>
    <string name="dial">DIAL</string>
    <string name="map">MAP</string>
    <string name="about">ABOUT</string>
    <string name="welcomeText">What would you like to do?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="store_numbers_key">storeNumbers</string>
    <string name="delete_stored_numbers_key">deleteStoredNumbers</string>
    <string name="title_activity_maps">Map</string>
    <string name="callIcon_description">Call icon</string>
    <string name="eraseIcon_description">Erase icon</string>
    <string name="saved_dialnumbers_filename">dialnumbers.txt</string>
    <string name="dialnumbers_key">dialnumbersKey</string>
    <string name="no_numbers_found_message">No telephone numbers are stored</string>
    <string name="downloadButtonText">DOWNLOAD</string>
    <string name="downloadVoicesTitle">DOWNLOAD VOICES</string>
    <string name="voices_download_url">https://dt031g.programvaruteknik.nu/dialer/voices</string>
    <string name="choose_voice_key">chooseVoice</string>
    <string name="default_voice">mamacita_us</string>
    <string name="dialnumbers_filename">dialnumbers</string>
</resources>