<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_save_24"
        android:key="@string/store_numbers_key"
        android:summary="Dialed telephone numbers are stored so they can be viewed later"
        android:title="Store numbers" />
    <Preference
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:key="@string/delete_stored_numbers_key"
        android:summary="Delete stored telephone numbers from storage"
        android:title="Delete stored numbers"/>
    <ListPreference
        android:icon="@drawable/ic_baseline_record_voice_over_24"
        android:key="@string/choose_voice_key"
        android:title="Voice"/>

</PreferenceScreen>